Fix dark mode chat messages

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -50,7 +50,7 @@ label {
   @apply flex justify-end;
 
   p {
-    @apply bg-gray-300;
+    @apply bg-gray-300 dark:bg-gray-600;
   }
 }
 
